result, doing exercise

--- a/res/assets/css/application.css
+++ b/res/assets/css/application.css
@@ -5121,12 +5121,12 @@ input.mdl-button[type="submit"] {
         content: "\e5d8";
         margin-right: 5px;
         vertical-align: sub; }
-      .mdl-data-table th.mdl-data-table__header--sorted-ascending:hover, .mdl-data-table th.mdl-data-table__header--sorted-descending:hover {
+      /* .mdl-data-table th.mdl-data-table__header--sorted-ascending:hover, .mdl-data-table th.mdl-data-table__header--sorted-descending:hover {
         cursor: pointer; }
         .mdl-data-table th.mdl-data-table__header--sorted-ascending:hover:before, .mdl-data-table th.mdl-data-table__header--sorted-descending:hover:before {
           color: rgba(0, 0, 0, 0.26); }
     .mdl-data-table th.mdl-data-table__header--sorted-descending:before {
-      content: "\e5db"; }
+      content: "\e5db"; } */
 
 .mdl-data-table__select {
   width: 16px; }
