--- a/res/assets/css/application.css
+++ b/res/assets/css/application.css
@@ -12094,3 +12094,24 @@ a {
 
 .mdl-textfield.is-disabled input {
   border-bottom-width: 2px !important; }
+
+  /* btn-dd */
+.btn-dd {
+      background-color: white;
+      border: none;
+      color: black;
+      padding: 12px 16px;
+      font-size: 16px;
+      cursor: pointer;
+  }
+
+  /* Darker background on mouse-over */
+.btn-dd:hover {
+      background-color: grey;
+  /* btn-dd_end */
+.cover-main{
+  background: url(<?php echo base_url();?>res/assets/images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+}
