--- a/res/assets/css/application.css
+++ b/res/assets/css/application.css
@@ -11036,7 +11036,7 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
   background: #202020; }
 
 main {
-  background: url("../images/imgo.png") center top no-repeat;
+  background: url("../images/Dark_background_1920x1080.png") center top no-repeat;
   background-size: cover; }
 
 .mdl-layout__header {
@@ -11709,9 +11709,10 @@ a {
     background-size: cover; }
     .cotoneaster .mdl-card__title .mdl-card__title-text {
       color: rgb(255, 255, 255); }
-.cotoneaster:hover{
+/* .cotoneaster:hover{
   opacity: .4;
-}
+} */
+
 
 @media screen and (max-width: 1151px) {
   .cotoneaster {
