--- a/res/assets/css/lib/setup.css
+++ b/res/assets/css/lib/setup.css
@@ -6,14 +6,14 @@ img{
 
 .sidenav {
     height: 100%;
-    width: 250px;
+    width: 18%;
     position: fixed;
     z-index: 1;
     top: 0;
     right: 0;
     background-color: #111;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 
 .sidenav a {
