--- a/res/assets/css/application.css
+++ b/res/assets/css/application.css
@@ -5121,12 +5121,12 @@ input.mdl-button[type="submit"] {
         content: "\e5d8";
         margin-right: 5px;
         vertical-align: sub; }
-      .mdl-data-table th.mdl-data-table__header--sorted-ascending:hover, .mdl-data-table th.mdl-data-table__header--sorted-descending:hover {
+      /* .mdl-data-table th.mdl-data-table__header--sorted-ascending:hover, .mdl-data-table th.mdl-data-table__header--sorted-descending:hover {
         cursor: pointer; }
         .mdl-data-table th.mdl-data-table__header--sorted-ascending:hover:before, .mdl-data-table th.mdl-data-table__header--sorted-descending:hover:before {
           color: rgba(0, 0, 0, 0.26); }
     .mdl-data-table th.mdl-data-table__header--sorted-descending:before {
-      content: "\e5db"; }
+      content: "\e5db"; } */
 
 .mdl-data-table__select {
   width: 16px; }
@@ -11036,7 +11036,7 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
   background: #202020; }
 
 main {
-  background: url("../images/Dark_background_1920x1080.png") center top no-repeat;
+  background: url("../images/imgo.png") center top no-repeat;
   background-size: cover; }
 
 .mdl-layout__header {
@@ -11705,10 +11705,13 @@ a {
     font-weight: 300;
     padding-bottom: 26px; }
   .cotoneaster .mdl-card__title {
-    background: url("../images/cotoneaster.jpg") center center no-repeat;
+    background: url("../images/banner.jpg") center center no-repeat;
     background-size: cover; }
     .cotoneaster .mdl-card__title .mdl-card__title-text {
       color: rgb(255, 255, 255); }
+.cotoneaster:hover{
+  opacity: .4;
+}
 
 @media screen and (max-width: 1151px) {
   .cotoneaster {
@@ -12091,3 +12094,24 @@ a {
 
 .mdl-textfield.is-disabled input {
   border-bottom-width: 2px !important; }
+
+  /* btn-dd */
+.btn-dd {
+      background-color: white;
+      border: none;
+      color: black;
+      padding: 12px 16px;
+      font-size: 16px;
+      cursor: pointer;
+  }
+
+  /* Darker background on mouse-over */
+.btn-dd:hover {
+      background-color: grey;
+  /* btn-dd_end */
+.cover-main{
+  background: url(<?php echo base_url();?>res/assets/images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+}
