--- a/res/assets/css/application.css
+++ b/res/assets/css/application.css
@@ -11710,9 +11710,9 @@ a {
     .cotoneaster .mdl-card__title .mdl-card__title-text {
       color: rgb(255, 255, 255); }
 
-.cotoneaster:hover{
-  opacity: .4;
-}
+/*.cotoneaster:hover{*/
+  /*opacity: .4;*/
+/*}*/
 /* .cotoneaster:hover{
   opacity: .4;
 } */
