--- a/res/assets/css/application.css
+++ b/res/assets/css/application.css
@@ -6770,7 +6770,10 @@ input.mdl-button[type="submit"] {
   margin: 0;
   opacity: 0;
   clip: rect(0 0 0 0);
-  z-index: -1; }
+  z-index: -1;
+  background-color: inherit;
+}
+
   .mdl-menu__container.is-visible .mdl-menu {
     opacity: 1;
     z-index: 999; }
@@ -6794,7 +6797,7 @@ input.mdl-button[type="submit"] {
 .mdl-menu__item {
   display: block;
   border: none;
-  color: rgba(0,0,0, 0.87);
+  color: whitesmoke;
   background-color: transparent;
   text-align: left;
   margin: 0;
@@ -7384,7 +7387,7 @@ input.mdl-button[type="submit"] {
       flex-shrink: 0;
       padding: 16px 20px;
       margin: 0;
-      color: #757575; }
+      color: white; !important;}
       @media screen and (max-width: 1440px) {
         .mdl-layout__drawer .mdl-navigation .mdl-navigation__link {
           padding: 16px 8px; } }
